css/landing.css
html {
	height: 100%;
	padding:0;
	margin:0;
}

body {
	height:100%;
	padding:0;
	margin:0;
	background-repeat: repeat;
}

a {
	text-decoration: none;
	color: #009bff;
}

a:hover {
	text-decoration: none;
	color: #00bd6f;
}


.green-text {
	color: #00BD6F !important;
}

.blue-text {
	color: #009BFF !important;
}

.white-text {
	color: white !important;
}

.bold {
	font-weight: bold;
}

.spacer {
	height: 10%;
	width: 100%;
}

.empty-span {
	font-size: 0vw;
}

.message {
	text-align: center;
}

.message-block {
	height: 25%;
}

.title-block {
	height: 25%;
	float-left;
	margin-top: 5%;
}

.title-text {
	color: white;
	font-size: 8vmin;
	text-align: center;
	font-family: "Raleway";
}

.notify-text {
	text-align: center;
	color: white;
	line-height: 100%;
	display: inline-block;
	vertical-align: middle;
	float: left !important;
}

#top-bar {
	margin-bottom: 0px !important;
}

#launch {
	background: url('images/coronado.jpg') no-repeat;
	width: 100%;
	height: 40%;
	background-size: 100% 100%;
}

#message {

}













.brand-image {
	width: 50%;
	height: 20%;
	margin-left: 25%;
	margin-right: 25%;
	padding-top: 1%;
	margin-top: 1%;
	background: url('images/beepi_wide.png') no-repeat;
	background-size: contain;
	background-position: center;
}

.brand-image img {
	width: 50%;
	height: 100%;
	margin-left: 25%;
	object-fit: contain;
	overflow: hidden;
}

.brand-expansion {
	height: 8%;
	font-family: "Raleway", 500;
	font-size: 8vh;
	text-align: center;
	color: #009bff;
}

.navbar-brand img {
	height: 100%;
	object-fit: contain;
	overflow: hidden;
}

